# llmcoking

./: .gitignore  CLAUDE.md  README.md  babel.config.js  chat_sessions.sql  data.js  messages.sql  package-lock.json  package.json  requirements.txt  start_all_windows.bat  start_frontend_windows.bat  start_text_backend_windows.bat  start_voice_backend_windows.bat
.claude/: settings.local.json
Coal blend paper/Coal blend papper/: desktop.ini
Coal blend paper/Coal blend papper/Bond Energy/: Bond energy.xlsx
Coal blend paper/Coal blend papper/Coal blending paper Ver.2/: 1-s2.0-S0960852414000121-mmc1.docx  desktop.ini
Coal blend paper/Coal blend papper/Coking coal pyrolysis/: desktop.ini
Coal blend paper/Coal blend papper/LDI-TOF-MS/: desktop.ini
docs/: AI_Agent_Infrastructure_Report.md
glossary/: asr_profile.json  terms.json
public/: index.html
src/: App.vue  main.js
src/LLM_back/: download_bge.py  fast_ingest.py  run_ingestion.bat  start_deepcoke.bat  test.py
src/LLM_back/deepcoke/: __init__.py  config.py  (+5 more)
src/components/: HomePage.vue  LandingPage.vue  LoginPage.vue  MainDia.vue  SimpleVoice.vue  VoiceAgent.vue
src/plugins/: element.js
src/router/: index.js
voice_agent_backend/: .env.example  README.md  pyproject.toml
voice_agent_backend/app/: main.py
voice_agent_backend/app/core/: config.py  events.py  state_manager.py
voice_agent_backend/app/routers/: agent_ws.py  duplex_ws.py  simple_ws.py
voice_agent_backend/app/services/: asr_postprocess.py  asr_service.py  deepseek_service.py  term_postprocess.py  tts_service.py  vad_service.py
(+39 files in other folders)
